--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <title>Getting Started</title>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </head>
 
 <style>
