--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-    <title>Getting Started</title>
+    <title>Tile Smasher</title>
     <script src="./main.js"></script>
 </head>
 
 <style>
 
 body {
-    background-image: url('../assets/metalshmetal.jpg');
+    background: orange;
+    /* background-image: url('../assets/metalshmetal.jpg'); */
 }
 
 #tilestyle{
@@ -37,7 +38,7 @@ body {
 </style>
 
 <body class="background">
-    <img id="tilestyle" src="../assets/PSTiles.png" alt="">
+    <!-- <img id="tilestyle" src="../assets/PSTiles.png" alt=""> -->
     <div class="outer-wrapper">
         <div class="inner-wrapper">
             <h1 class="title">Tile Smasher</h1>
