--- a/index.html
+++ b/index.html
@@ -12,19 +12,26 @@
 <style>
 
 body {
-    background: orange;
-    /* background-image: url('../assets/metalshmetal.jpg'); */
+    /* background: orange; */
+    /* background-image: url('./assets/white-brick-background.jpg'); */
+    background-image: url('./assets/wormhole.jpg');
+    background-size: cover;
 }
 
 #tilestyle{
     display: none;
 }
 
+/* #gameCanvas {
+    background: pink;
+} */
+
 .title{
     display: flex;
     justify-content: center;
     font-size: 30px;
-    color: antiquewhite;
+    color: rgba(250, 252, 250, 0.788);
+    text-shadow: 3px 3px 3px black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .outer-wrapper{
