--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 <style>
 
 body {
-    /* background: orange; */
-    /* background-image: url('./assets/white-brick-background.jpg'); */
     background-image: url('./assets/wormhole.jpg');
     background-size: cover;
 }
@@ -22,9 +20,16 @@ body {
     display: none;
 }
 
-/* #gameCanvas {
-    background: pink;
-} */
+.title-holder {
+    background-color: rgba(173, 255, 47, 0.788);
+    height: 70px;
+    width: 800px;
+    margin: auto;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 50px;
+}
 
 .title{
     display: flex;
@@ -42,14 +47,45 @@ body {
     max-width: 800px;
     margin: 0 auto;
 }
+
+.directions-holder{
+
+    background-color: rgba(173, 255, 47, 0.788);
+    height: 200px;
+    width: 800px;
+    margin: auto;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 50px;
+}
+
+.directions{
+    color: rgba(250, 252, 250, 0.788);
+    text-shadow: 2px 2px 2px black;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    justify-content: center;
+}
 </style>
 
 <body class="background">
     <!-- <img id="tilestyle" src="../assets/PSTiles.png" alt=""> -->
     <div class="outer-wrapper">
         <div class="inner-wrapper">
+        <div class="title-holder">
             <h1 class="title">Tile Smasher</h1>
-            <canvas id="gameCanvas" width="800" height="600"></canvas>
+        </div>
+        <br>
+        <canvas id="gameCanvas" width="800" height="600"></canvas>
+        </div>
+        <br>
+        <div class="directions-holder">
+            <p class="directions">Move mouse to control ball</p>
+            <p class="directions">Try to DESTROY as many bricks as possible</p>
+            <p class="directions">The further on the edge of the paddle you hit the faster the ball goes</p>
         </div>
     </div>
 </body>
