--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="utf-8" http-equiv="encoding">
     <title>Tile Smasher</title>
     <script src="./main.js"></script>
+    <link rel="shortcut icon" href="./assets/green20brick.ico" type="image/x-icon" />
 </head>
 
 <style>
