Add button styling

--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@ body {
     margin-bottom: 30%;
 }
 
+button:active{
+    box-shadow: 5px 5px 5px 5px black;
+}
+
 .words{
     width: 800px;
     display: flex;
