--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ button:active{
     background-color: rgba(174, 175, 172, 0.85);
     text-shadow: 1.5px 1.5px 1.5px black;
     box-shadow: 0px 0px 10px 10px black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #gameCanvas{
